src/objects/CancelRuleDefine__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>キャンセル規定定義</description>
    <fields>
        <fullName>CancelRate__c</fullName>
        <inlineHelpText>宿泊日からN日までN時までキャンセルパーセント値</inlineHelpText>
        <label>キャンセル料</label>
        <precision>7</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>RuleBefDayNums__c</fullName>
        <label>N日前まで</label>
        <precision>5</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShopCode__c</fullName>
        <externalId>true</externalId>
        <label>店舗コード</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>キャンセル規定</label>
</CustomObject>